Refactor code structure for improved readability and maintainability

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,7 +98,7 @@ markdown_extensions:
 # Page tree
 nav:
   - index.md
-  - ⚙️ Connection: 
+  - Connection Setup: 
     - connection/index.md
 
   - ⚙️ Settings: 
