fix: comment out unused theme palette options in mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,18 +39,18 @@ theme:
   favicon: assets/AGRICAM_LOGO.jpg
 
   palette: 
-    - scheme: slate
-      primary: blue grey
-      accent: teal
-      toggle:
-        icon: material/lightbulb
-        name: Switch to light mode
+    # - scheme: slate
+    #   primary: blue grey
+    #   accent: teal
+    #   toggle:
+    #     icon: material/lightbulb
+    #     name: Switch to light mode
     - scheme: default
-      primary: blue grey
-      accent: teal
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to dark mode
+      primary: teal
+      accent: black
+      # toggle:
+      #   icon: material/lightbulb-outline
+      #   name: Switch to dark mode
 
 # Plugins
 plugins:
